# assetto_autonomous

./: .gitignore  CMakeLists.txt  README.md  UML.md
Records/: monza.txt
helpers/: CMakeLists.txt  record.cpp
include/: Point.h  SharedInformation.h  SharedMemory.h
main/: CMakeLists.txt  main.cpp
scripts/: control_output.py
src/: CMakeLists.txt
src/Car/: CMakeLists.txt  Car.cpp  Car.h  README.md
src/Communication/: CMakeLists.txt  Communicator.cpp  Communicator.h  _WindowsCommunicator.cpp  _WindowsCommunicator.h  _control_output.py  _takeImage.py
src/Control/: CMakeLists.txt  Controller.cpp  Controller.h  PurePursuit.cpp  PurePursuit.h  _Controller.cpp  _Controller.h
src/Planning/: CMakeLists.txt  README.md
src/car/: CMakeLists.txt  Car.cpp  Car.h
src/communication/: ACSharedMemory.cpp  ACSharedMemory.h  CMakeLists.txt  Reader.cpp  Reader.h  Sender.cpp  Sender.h  _assetto_corsa_template.cpp  send_to_linux.cpp
src/control/: CMakeLists.txt
src/perception/: _generate_track_limits.py
tests/control/: CMakeLists.txt  test_PurePursuit_CalculateBasePoint.cpp  test_PurePursuit_CalculateLookAheadPoint.cpp
