cmake_minimum_required(VERSION 3.23.0...3.25.2)
project(assetto_autonomous VERSION 0.1 LANGUAGES CXX)

IF (WIN32)
    add_definitions(-D_WIN32_WINNT=0x0A00)
    set(Boost_INCLUDE_DIR "C:/Program Files/boost/boost_1_82_0")
ELSE()
    set(Boost_INCLUDE_DIR "/usr/include/boost_1_82_0")
ENDIF()
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_DEBUG_LIBS OFF)
set(Boost_USE_RELEASE_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME ON)

include(CTest)

add_subdirectory(helpers)
add_subdirectory(main)
add_subdirectory(src)
