add_executable(test_PurePursuit_CalculateLookAheadPoint test_PurePursuit_CalculateLookAheadPoint.cpp)
target_link_libraries(test_PurePursuit_CalculateLookAheadPoint car)
add_test(NAME test_PurePursuit_CalculateLookAheadPoint COMMAND test_PurePursuit_CalculateLookAheadPoint)

add_executable(test_PurePursuit_CalculateBasePoint test_PurePursuit_CalculateBasePoint.cpp)
target_link_libraries(test_PurePursuit_CalculateBasePoint car)
add_test(NAME test_PurePursuit_CalculateBasePoint COMMAND test_PurePursuit_CalculateBasePoint)